fix lobby content z-index

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
 }
 
